amd/vitisWorkSpace/.metadata/.plugins/org.eclipse.cdt.ui/project_1.build.log
20:33:37 **** Build of configuration Debug for project project_1 ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Users/Eliot/Documents/Code/amd/vitisWorkSpace/design_1_wrapper/export/design_1_wrapper/sw/design_1_wrapper/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:8:16: error: 'XPAR_AXI_GPIO_LED_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
    8 | #define LED_ID XPAR_AXI_GPIO_LED_DEVICE_ID
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:22:38: note: in expansion of macro 'LED_ID'
   22 |         cfg_ptr = XGpio_LookupConfig(LED_ID);
      |                                      ^~~~~~
../src/main.c:8:16: note: each undeclared identifier is reported only once for each function it appears in
    8 | #define LED_ID XPAR_AXI_GPIO_LED_DEVICE_ID
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:22:38: note: in expansion of macro 'LED_ID'
   22 |         cfg_ptr = XGpio_LookupConfig(LED_ID);
      |                                      ^~~~~~
../src/main.c:7:16: error: 'XPAR_AXI_GPIO_BUTTONS_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_GPIO_1_DEVICE_ID'?
    7 | #define BTN_ID XPAR_AXI_GPIO_BUTTONS_DEVICE_ID
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:26:38: note: in expansion of macro 'BTN_ID'
   26 |         cfg_ptr = XGpio_LookupConfig(BTN_ID);
      |                                      ^~~~~~
make[1]: *** [src/subdir.mk:23: src/main.o] Error 1
make: *** [makefile:34: all] Error 2

20:33:37 Build Finished (took 483ms)

